--- a/css/styles.css
+++ b/css/styles.css
@@ -90,9 +90,8 @@ main {
 }
 
 .nav-list-item {
-    
-}
 
+}
 
 .nav-link:hover,
 .contact-link:hover,
@@ -101,10 +100,10 @@ main {
     color: #404BBF;
 }
 
-.nav-link::after,
-.contact-link::after,
-.nav-link::after,
-.contact-link::after {
+.nav-link:hover::after,
+.contact-link:hover::after,
+.nav-link:focus::after,
+.contact-link:focus::after {
     content: "";
     color: #404BBF;
     width: 100%;
@@ -160,6 +159,7 @@ main {
     background-repeat: no-repeat;
     background-position: center;
     background-image: linear-gradient(to bottom,rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/people-office.jpg);
+    background-size: cover;
 }
 
 .main-banner .container {
@@ -193,6 +193,7 @@ main {
     min-width: 169px;
     height: 56px;
     margin: 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 
 .main-banner-btn:hover, .main-banner-btn:focus {
