--- a/css/styles.css
+++ b/css/styles.css
@@ -230,6 +230,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 8px;
 }
 
 .features-icon {}
@@ -250,7 +251,6 @@ main {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    padding-top: 32px;
     margin-bottom: 8px;
 }
 
@@ -292,9 +292,9 @@ main {
 
 .about-list-item {
     background-color: #ffffff;
-    
     flex-basis: calc((100% - 72px)/4);
     border-radius: 0 0 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .about-img-content {
@@ -302,7 +302,7 @@ main {
 }
 
 .about-dscr {
-    padding: 32px 0 0 0;
+    padding: 32px 0;
     text-align: center;
 }
 
@@ -313,6 +313,10 @@ main {
 .about-dscr .list-item-content {
     padding: 0;
     margin-bottom: 8px;
+}
+
+.icon-list-container {
+    
 }
 
 .icon-list {
