--- a/css/styles.css
+++ b/css/styles.css
@@ -337,6 +337,7 @@ main {
     width: 100%;
     background-color: #4D5AE5;
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-link:hover, .icon-link:focus {
@@ -359,12 +360,16 @@ main {
 }
 
 .portfolio-list-item {
-    
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-item:hover {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
     cursor: pointer;
+}
+
+.portfolio-list-item:hover p {
+    transform: translateY(0%);
 }
 
 .portfolio-dscr {
