--- a/css/styles.css
+++ b/css/styles.css
@@ -368,8 +368,28 @@ main {
     cursor: pointer;
 }
 
+.portfolio-img-container:hover .img-container-content {
+    transform: translateY(0%);
+}
+
 .portfolio-img-container {
-    
+    position: relative;
+    overflow: hidden;
+}
+
+.img-container-content {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-dscr {
