--- a/css/styles.css
+++ b/css/styles.css
@@ -460,7 +460,7 @@ main {
     margin: 0;
 }
 
-.footer-social .icon-link:hover, .icon-link:focus {
+.footer-social .icon-link:hover, .footer-social .icon-link:focus {
     background-color: #31d0aa;
 }
 
