--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,10 @@ main {
     
 }
 
+.current {
+    color: #404bbf;
+}
+
 .nav-link:hover,
 .contact-link:hover,
 .nav-link:focus,
@@ -110,7 +114,7 @@ main {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link:hover::after, .nav-link:focus::after   {
+.nav-link:hover::after, .nav-link:focus::after, .current:hover::after {
     content: "";
     width: 100%;
     position: absolute;     
@@ -157,6 +161,8 @@ main {
     background-position: center;
     background-image: linear-gradient(to bottom,rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/people-office.jpg);
     background-size: cover;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 .main-banner .container {
