--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ main {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link:hover::after, .nav-link:focus::after, .current:hover::after {
+.nav-link.current::after {
     content: "";
     width: 100%;
     position: absolute;     
