--- a/css/styles.css
+++ b/css/styles.css
@@ -159,7 +159,7 @@ main {
     padding: 188px 0;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: linear-gradient(to bottom,rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/people-office.jpg);
+    background-image: linear-gradient(to bottom,rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
     background-size: cover;
     max-width: 1440px;
     margin: 0 auto;
@@ -371,8 +371,8 @@ main {
     cursor: pointer;
 }
 
-.portfolio-img-container:hover .img-container-content {
-    transform: translateY(0%);
+.portfolio-list-item:hover .img-container-content {
+    transform: translateY(0%);пш
 }
 
 .portfolio-img-container {
